tests/negative/gold/abstract7_test.gold
tests/negative/abstract7_test.toit:9:12: error: Members can't be abstract in non-abstract class
  abstract bar x
           ^~~
tests/negative/abstract7_test.toit:12:12: error: Members can't be abstract in non-abstract class
  abstract gee x y
           ^~~
tests/negative/abstract7_test.toit:8:7: error: Non-abstract class 'B' is missing implementations
class B extends A:
      ^
tests/negative/abstract7_test.toit:6:12: note: Missing implementation for 'foo'
  abstract foo
           ^~~
tests/negative/abstract7_test.toit:9:12: note: Missing implementation for 'bar'
  abstract bar x
           ^~~
Compilation failed.
